--- a/backend/pratise backend/practice project pin/pin/views/addtocard.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/addtocard.ejs
@@ -3,7 +3,6 @@
     <!-- addtocard page -->
     <link rel="stylesheet" href="/stylesheets/addtocard.css">
     <div class="main">
-
         <div class="cards">
             <% if (cart && cart.products.length> 0) { %>
                 <div class="card"
@@ -42,8 +41,7 @@
                             <div class="amt" style="display: flex; align-items: center; gap: 50px;">
                                 <h1 style="font-size: 20px; font-weight: 100;">$<%= cartItem.productId.pPrice %>
                                 </h1>
-                                <!-- <a style="text-decoration: none; color: #fff;" href="/card"><i
-                                    class="fa-solid fa-xmark"></i></a> -->
+                
                                 <form action="/delete-from-cart/<%= cartItem.productId._id %>" method="POST"
                                     style="margin: 0;">
                                     <button style="border: none; background-color: transparent;" type="submit">
@@ -83,6 +81,7 @@
 
 
         <% } else { %>
+            <!-- if add to card leghth is 0 then showing empty card page  -->
             <div class="card-details">
                 <h1>Your card is empaty</h1>
                 <h2>See All Good Things</h2>
