--- a/backend/pratise backend/practice project pin/pin/views/donate.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/donate.ejs
@@ -1,6 +1,9 @@
 <% include ./partial/header.ejs %>
 <link rel="stylesheet" href="/stylesheets/donate.css">
+
     <div class="menu">
+
+        <!-- contact links -->
         <div class="contenercardx">
             <div class="cardx">
                 <h3>CONNECT WITH US</h3>
@@ -31,6 +34,8 @@
                 </ul>
             </div>
         </div>
+
+        <!-- donation amount page -->
         <div class="bar">
             <button class="btn">back to menu</button>
             <h5>THANK YOU FOR DONATING TO THE TWO GOOD FOUNDATION. YOU ARE HELPING TO CHANGE THE COURSE OF A WOMAN'S
@@ -61,7 +66,11 @@
         </div>
     </div>
 
+
+    <!-- javascript functionality -->
     <script>
+
+        // Selection dome query
        let amt =  document.querySelector(".amt");
        let amt2 =  document.querySelector(".amt2");
        let donate =  document.querySelector("#donate");
