--- a/backend/pratise backend/practice project pin/pin/views/partial/cHeader.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/partial/cHeader.ejs
@@ -72,12 +72,9 @@
         <div class="part2">
             <a href="/">Home</a>
             <a href="/bespoke">Bespoke Event</a>
-
             <a id="group" href="/group-order"><i class="fa-solid fa-users-line" id="group2"></i>group Order</a>
-
             <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-            <a href="/log-register"><i class="fa-solid fa-user-plus"></i></a>
-
+            <a href="/login-user"><i class="fa-solid fa-user-plus"></i></a>
         </div>
     </header>
 
