--- a/backend/pratise backend/practice project pin/pin/views/product.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/product.ejs
@@ -1,271 +1,8 @@
 <% include ./partial/header.ejs %>
-
+    
+    <link rel="stylesheet" href="/stylesheets/product.css">
     <!-- single product page -->
-    <style>
-        * {
-            color: #E6622B;
-            padding: 0;
-            margin: 0;
-        }
-
-        .header-nav .nav-part2 a {
-            z-index: 99;
-            color: #E6622B;
-        }
-
-        .product {
-            min-height: 96vh;
-            width: 100%;
-            display: flex;
-            align-items: start;
-            justify-content: space-between;
-            padding-top: 250px;
-            padding-left: 20px;
-            padding-right: 20px;
-            /* background-color: red; */
-        }
-
-        .product .card h1 {
-            width: 30vw;
-            font-size: 3vw;
-            font-weight: 900;
-            /* background-color: red; */
-            text-transform: capitalize;
-        }
-
-        .pCard1 {
-                /* background-color: rebeccapurple; */
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                flex-direction: row;
-                /* height: 60vh; */
-                width: 70%;
-                /* background-color: rebeccapurple; */
-            }
-
-        .product .card h5 {
-            height: 45px;
-            width: 45%;
-            border-radius: 30px;
-            margin-top: 20px;
-            color: aliceblue;
-            background-color: #E6622B;
-            display: flex;
-            align-items: center;
-            justify-content: space-evenly;
-        }
-
-        .product .card .part {
-            width: 20vw;
-            height: 45px;
-            /* background-color: #E6622B; */
-            background-color: #E6622B;
-            display: flex;
-            align-items: center;
-            justify-content: space-evenly;
-            border-radius: 30px;
-            margin-top: 20px;
-            /* background-color: green; */
-
-        }
-
-        .product .card .part a {
-            color: #fff;
-            text-decoration: none;
-            /* background-color: rebeccapurple; */
-        }
-
-        .product .card .part span {
-            color: #fff;
-            text-decoration: none;
-            margin: 10px;
-        }
-
-
-
-
-        .product img {
-            height: 52vh;
-            width: 30vw;
-            object-fit: cover;
-            /* margin-left: -400px; */
-            /* background-color: red; */
-        }
-
-        .product .card3 {
-            height: 100%;
-            width: 20%;
-            display: flex;
-            gap: 50px;
-        }
-
-        .product .card3 h5 {
-            font-size: 2.6vh;
-            text-align: start;
-            font-weight: 400;
-            color: #E6622B;
-        }
-
-        .produc2 {
-            display: flex;
-            justify-content: space-between;
-            padding: 0px 20px;
-            border-top: 1px solid #E6622B;
-            ;
-            margin: 0px 50px;
-            padding-top: 15px;
-        }
-
-
-        .product .pCard1 .card .part #quantityForm h1 {
-            /* background-color: rebeccapurple; */
-            color: #fff;
-            font-size: 1vw;
-
-        }
-
-        #decreaseQuantityBtn {
-            border: none;
-
-        }
-
-        #decreaseQuantityBtn {
-            background-color: #E6622B;
-            color: #fff;
-            border: 1px solid #E6622B;
-      
-
-        }
-
-
-        #increaseQuantityBtn {
-            border: none;
-
-        }
-
-        #increaseQuantityBtnLink {
-            background-color: #E6622B;
-            color: #fff;
-            border: 1px solid #E6622B;
-           
-
-        }
-
-
-        @media (max-width:600px) {
-
-            .product {
-                /* background-color: green; */
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                flex-direction: column;
-                width: 100%;
-                /* background-color: rebeccapurple; */
-            }
-
-            .pCard1 {
-                /* background-color: rebeccapurple; */
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                flex-direction: column-reverse;
-                height: 60vh;
-                width: 100%;
-            }
-
-            .pCard1 img {
-                height: 50vw;
-                width: 100%;
-                object-fit: cover;
-
-            }
-
-
-            .product .pCard1 .card h1 {
-                /* color: green; */
-                width: 100%;
-                font-size: 7vw;
-                /* padding-bottom: 100px; */
-            }
-
-            .product .pCard1 .card {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: column;
-                /* background-color: gray; */
-                height: 200px;
-
-            }
-
-
-            .product .pCard1 .card .part {
-                width: 70%;
-            }
-
-            .product .pCard1 .card .part #quantityForm h1 {
-                /* background-color: rebeccapurple; */
-                font-size: 3vw;
-            }
-
-
-            #decreaseQuantityBtn {
-                border: none;
-
-            }
-
-            #decreaseQuantityBtn {
-                background-color: transparent;
-                color: #fff;
-                border: 1px solid #E6622B;
-                font-size: 3vw;
-
-            }
-
-
-            #increaseQuantityBtn {
-                border: none;
-
-            }
-
-            #increaseQuantityBtnLink {
-                background-color: E6622B;
-                color: #fff;
-                border: 3px solid #E6622B;
-                font-size: 3vw;
-
-            }
-
-            .card3 {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: column;
-                /* width: 50vw; */
-                /* background-color: green; */
-            }
-
-            .card3 h5 {
-                width: 90vw;
-                text-align: justify;
-
-            }
-
-            .produc2{
-                /* background-color: rebeccapurple; */
-                width: 100%;
-                padding: 0px;
-                margin: 0px;
-                padding: 10px 20px;
-            }
-
-        }
-    </style>
     <div class="product">
-
-
         <div class="pCard1">
             <div class="card">
                 <h1 name="title">
@@ -330,6 +67,8 @@
         <h5>50% OF PROFITS REINVESTED INTO THE TWO GOOD FOUNDATIO</h5>
     </div>
 
+
+
     <script>
         // JavaScript to handle quantity changes
         document.getElementById('decreaseQuantityBtn').addEventListener('click', function () {
@@ -358,40 +97,3 @@
         });
     </script>
     <% include ./partial/footer.ejs %>
-
-
-
-
-
-        <!-- <% if (getProduct) { %> -->
-        <!-- <h2><%= getProduct._id %></h2> -->
-        <!-- <% } %> -->
-
-
-
-        <!-- <div class="part">
-                <div style="display: flex; align-items: center; justify-content: center; width: 3vw; gap: 10px;">
-                    <form action="/update-quantity/<%= getProduct._id %>" method="POST">
-                        <input type="hidden" name="action" value="decrease">
-                        <button style="border: none;" type="submit"><i style="background-color: #E6622B; color: #fff; border: 1px solid #E6622B;" class="ri-subtract-line"></i></button>
-                    </form>
-                    <h1 style="color:#fff; font-size: 1vw;">
-                        <%= getProduct.quantity %>
-                    </h1>
-                    <form action="/update-quantity/<%= getProduct._id %>" method="POST">
-                        <input type="hidden" name="action" value="increase">
-                        <button style="border: none;" type="submit"><i style="background-color: #E6622B; color: #fff; border: 1px solid #E6622B;" class="ri-add-line"></i></button>
-                    </form>
-                </div>
-                <a href="#">$<%= getProduct.pPrice %></a>
-                <form action="/add-to-cart/<%= getProduct._id %>" method="post">
-                    <button style="background-color: #E6622B; color: #fff; border: none; font-size: 2vh;" type="submit">Add to Cart</button>
-                </form>
-
-                <button style="background-color: #E6622B; color: #fff; border: none; font-size: 2vh;" type="submit"><a href="/add-to-cart">Add to Cart2</a></button>
-            </div> -->
-
-
-        <!-- <button style="background-color: #E6622B; color: #fff; border: none; font-size: 2vh;" type="submit">
-                    <a href="/add-to-cart">Add to Cart2</a>
-                </button> -->
