--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/shop.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/shop.css
@@ -1,14 +1,20 @@
+
+/* universe section */
 *{
     padding: 0;
     margin: 0;
 }
 
+
+/* body page style */
 body{
     height: 100%;
     width: 100%;
 }
 
-/* mouse cercuil */
+
+
+/* mouse cercule */
 .curcer{
   height: 150px;
   width: 150px;
@@ -19,7 +25,7 @@ body{
   
 }
 
-/* lending page */
+/* lending shop home page */
 .page1{
     min-height: 100vh;
     width: 100%;
@@ -42,8 +48,6 @@ body{
 
 }
 
-
-
 .page1 .card1 h1{
     font-size: 9vw;
     letter-spacing: 2px;
@@ -57,6 +61,8 @@ body{
     padding-left: 50%;
 }
 
+
+
 /* shop products pages */
 .page2{
     min-height: 100vh;
@@ -65,7 +71,6 @@ body{
     align-items: center;
     justify-content:space-around;
     opacity: 0;
-    /* background-color: red; */
     
 }
 
@@ -78,6 +83,7 @@ body{
 
 }
 
+
 .page2 img{
     height: 500px;
     width: 100%;
@@ -86,6 +92,7 @@ body{
 
 
 
+/* product page3 */
 .page3{
     min-height: 100vh;
     width: 100%;
@@ -123,7 +130,7 @@ body{
 
 
 
-
+/* product page4 */
 .page4{
     min-height: 100vh;
     width: 100%;
@@ -250,6 +257,11 @@ body{
     font-size: 15px;
   }
 
+
+
+
+
+/* mobile responsive styling using media query */
 @media (max-width:600px) {
     
   .page1{
@@ -266,9 +278,6 @@ body{
   .page1 .card1{
     height: 100%;
     width: 100%;
-    
-
-
   }
 
   
@@ -277,7 +286,6 @@ body{
     height: 100%;
     width: 100%;
     padding-top: 20px;
-
   }
 
 
@@ -343,7 +351,6 @@ body{
       justify-content:space-around;
       flex-direction: row;
       opacity: 1;
-      /* background-color: rebeccapurple; */
       padding: 0px;
 
     
@@ -376,13 +383,6 @@ body{
   width: 60%;
   text-transform: capitalize;
 }
-
-
-  /* .page3 img{
-    height: 400px;
-    width: 100%;
-
-  } */
 
 
   .page4{
@@ -473,10 +473,6 @@ body{
   .page6-part2 h4{
     font-size: 4vw;
   }
-
-
-
-
 
     
   }
