--- a/backend/pratise backend/practice project pin/pin/views/loginUser.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/loginUser.ejs
@@ -2,26 +2,29 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/stylesheets/loregiter.css">
+    <link rel="stylesheet" href="/stylesheets/loginUser.css">
 
 
-    
+    <!-- login home page img -->
     <div class="page1">
         <img src="https://az727718.vo.msecnd.net/c34bf49efec4419a808454d753e542b5/images/d3b249074f2d48c89939f0c1e399cf29_1728w.jpg"
             alt="">
     </div>
+
+    <!-- login form -->
     <div class="page2">
         <div class="part1">
             <h1>EXISTING CUSTOMERS</h1>
             <p>Please enter your username and password below:</p>
             <form id="FItems" action="/login" method="post">
-                <p>username<input id="Iitems" type="text" name="username" id="username"></p>
-                <p>password<input id="Iitems" type="password" name="password" id="password"></p>
+                <p>username<input id="Iitems" type="text" name="username" id="username" placeholder="shubham321@gmail.com"></p>
+                <p>password<input id="Iitems" type="password" name="password" id="password" placeholder="123456"></p>
                 <a href="#">Forgotten your username or password?</a>
                 <input type="submit" value="sign in" id="btn">
             </form>
 
         </div>
+        <!-- register page link page -->
         <div class="part2">
             <h1>NEW CUSTOMERS</h1>
             <h5>First time ordering with us? <span>Create a new account, it's quick and simple:</span></h5>
