--- a/backend/pratise backend/practice project pin/pin/views/partial/header.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/partial/header.ejs
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/index.css">
     
 </head>
 
 <body>
+    <!-- navbar -->
     <header class="header-nav">
         <div class="nav-part1">
             <a href="/"><svg id="svg1" class="logo" width="106" height="83" viewBox="0 0 106 83" fill="none"
