--- a/backend/pratise backend/practice project pin/pin/views/register.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/register.ejs
@@ -4,13 +4,20 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/stylesheets/register.css">
 
+    <!-- regiser home page img -->
     <div class="page1">
         <img src="https://az727718.vo.msecnd.net/c34bf49efec4419a808454d753e542b5/images/d3b249074f2d48c89939f0c1e399cf29_1728w.jpg"
             alt="">
     </div>
+
+    <!-- rigister page -->
     <div class="page2">
+
+        <!-- register form -->
         <form action="/register" method="post">
             <h1>CONTACT DETAILS</h1>
+
+            <!-- user name and last name -->
             <div class="part1">
                 <div class="card1">
                     <p>First-Name <span>*</span><input type="text" name="first_name" id="first_name"
@@ -18,6 +25,7 @@
                     <p>last-name<span>*</span><input type="text" name="last_name" id="last_name" placeholder="Meshram"
                             required></p>
                 </div>
+
                 <div class="card2">
                     <p>Phone-number<input class="mobile" type="number" name="phone_number" id="phone-number"
                             placeholder="7038956822"></p>
@@ -27,6 +35,10 @@
                 </div>
                 <p>company<input type="text" name="company" id="company"></p>
             </div>
+
+
+
+            <!-- user address details -->
             <div class="part2">
                 <h1>ADDRESS</h1>
                 <div class="card1">
@@ -47,8 +59,12 @@
                             <option value="AP">AP</option>
                         </select></p>
                 </div>
+
                 <p>Postcode <input type="number" name="pastcode" id="pastcode"></p>
             </div>
+
+
+            <!-- ratio of selection  -->
             <div class="part3">
                 <h1>INVOICE ADDRESS</h1>
                 <h5>Same As Above*</h5>
@@ -58,12 +74,18 @@
                 </div>
 
             </div>
+
+            <!-- username and password set -->
             <div class="part4">
                 <h1>ACCOUNT</h1>
                 <p>username <input type="text" name="username" id="username"></p>
                 <p>password <input type="password" name="password" id="password"></p>
 
             </div>
+
+
+
+            <!-- buttens -->
             <div class="part5">
                 <p>To help protect your privacy, passwords must be at least 8 characters long and contain letters &
                     numbers.
