--- a/backend/pratise backend/practice project pin/pin/views/stories.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/stories.ejs
@@ -5,6 +5,7 @@
     <div id="main">
 
 
+        <!-- stories page -->
         <div class="page1">
             <div class="card">
                 <h1 style="font-size: 11vw; letter-spacing: 1px;">STORIES</h1>
@@ -19,6 +20,7 @@
             </div>
         </div>
 
+        <!-- stories card  -->
         <div class="page2">
             <div class="main">
                 <div class="card1">
@@ -106,10 +108,13 @@
     </div>
 
 
+    <!--locomotive scroll -->
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+        <!-- ScrollToPlugin -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"
         integrity="sha512-1PKqXBz2ju2JcAerHKL0ldg0PT/1vr3LghYAtc59+9xy8e19QEtaNUyt1gprouyWnpOPqNJjL4gXMRMEpHYyLQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
