--- a/backend/pratise backend/practice project pin/pin/views/about.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/about.ejs
@@ -4,7 +4,7 @@
 
 
     <div id="main">
-        
+        <!-- about home page1 -->
         <div class="page1">
             <h1>WHY WE EXIST</h1>
             <div class="card">
@@ -18,10 +18,14 @@
                 alt="">
             <h2 class="headbtn">SO FAR TWO GOOD</h2>
         </div>
+
         <div class="main">
+            <!-- video page2 -->
             <div class="page2">
                 <video autoplay muted loop src="/videos/final.mp4"></video>
             </div>
+
+            <!-- who we are page 3 -->
             <div class="page3">
                 <div class="card">
                     <h1>01</h1>
@@ -70,6 +74,8 @@
                         too.</p>
                 </div>
             </div>
+
+            <!-- over the mission list page 4 -->
             <div class="page4">
                 <div class="card">
                     <h1>02</h1>
@@ -102,14 +108,15 @@
                         alt="">
                 </div>
             </div>
-
-            <!-- <div> -->
             <div class="page5">
                 <div class="endpage">
                     <h1>ENTER YOUR EMAIL ADDRESS FOR GOOD</h1>
                     <i class="ri-arrow-right-line"></i>
                 </div>
             </div>
+
+
+            <!-- footer page -->
             <div class="page6">
                 <div class="card1 card">
                     <h3>CONNECT WITH US</h3>
