--- a/backend/pratise backend/practice project pin/pin/views/contact.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/contact.ejs
@@ -2,10 +2,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="/stylesheets/contact.css">
     <div class="main">
+        <!-- contact home page1 -->
         <div class="page1">
             <h1 style="padding-top: 200px;">WANNA GET IN TOUCH?</h1>
         </div>
 
+        <!-- contract iformation page2 -->
         <div class="page2">
             <div class="card">
                 <div class="card1">
@@ -47,6 +49,8 @@
                 <i class="ri-arrow-right-line"></i>
             </div>
         </div>
+
+        <!-- footer page 6 -->
         <div class="page6">
             <div class="card1 card">
                 <h3>CONNECT WITH US</h3>
