--- a/backend/pratise backend/practice project pin/pin/views/catringPrduct/bespoke.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/catringPrduct/bespoke.ejs
@@ -1,4 +1,4 @@
-<% include ./partial/cHeader.ejs %>
+<% include .//../catringPrduct/partial/cHeader.ejs %>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -54,4 +54,4 @@
     </div>
 
 
-<% include ./partial/cFooter.ejs %>
+    <% include .//../catringPrduct/partial/cFooter.ejs %>
