--- a/backend/pratise backend/practice project pin/pin/views/catringPrduct/catering.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/catringPrduct/catering.ejs
@@ -1,9 +1,11 @@
-<% include ./partial/cHeader.ejs %>
+<% include .//../catringPrduct/partial/cHeader.ejs %>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="/stylesheets/catering.css">
+    <!-- <link rel="stylesheet" href=""> -->
+    
 
 
     <!-- searchbar -->
@@ -21,7 +23,7 @@
 
 
 
-    <!-- catering main page -->
+    <!-- catering home page -->
     <div class="main">
         <div class="page1">
             <img src="https://az727718.vo.msecnd.net/c34bf49efec4419a808454d753e542b5/images/d3b249074f2d48c89939f0c1e399cf29_1728w.jpg"
@@ -62,5 +64,5 @@
         </div>
 
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
-<script src="/javascripts/catring.js"></script>
-<% include ./partial/cFooter.ejs %>
+<!-- <script src="/javascripts/catring.js"></script> -->
+<% include .//../catringPrduct/partial/cFooter.ejs %>
