--- a/backend/pratise backend/practice project pin/pin/views/catringPrduct/groupOrder.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/catringPrduct/groupOrder.ejs
@@ -1,9 +1,11 @@
-<% include ./partial/cHeader.ejs %>
+<% include .//../catringPrduct/partial/cHeader.ejs %>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/stylesheets/group.css">
 
+
+    <!-- gurops order page -->
     <div class="hidden">
         <div class="page">
             <h1>START A GROUP ORDER</h1>
@@ -15,6 +17,8 @@
             </form>
         </div>
     </div>
+
+    <!-- image -->
     <div class="page1">
         <img src="https://az727718.vo.msecnd.net/c34bf49efec4419a808454d753e542b5/images/d3b249074f2d48c89939f0c1e399cf29_1728w.jpg"
             alt="">
@@ -44,4 +48,4 @@
     </div>
 
 
-<% include ./partial/cFooter.ejs %>
+    <% include .//../catringPrduct/partial/cFooter.ejs %>
