--- a/backend/pratise backend/practice project pin/pin/views/razorpayPayment.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/razorpayPayment.ejs
@@ -8,8 +8,10 @@
 </head>
 <body>
 
-    
+<!-- navbar -->
 <nav style="display: flex; align-items: center;justify-content: space-between;">
+
+    <!-- logo -->
     <div class="logo">
         <a style="text-decoration: none; color: #111;" href="/"><svg id="svg1" class="logo" width="106" height="83"
                 viewBox="0 0 106 83" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -54,9 +56,13 @@
             </svg></a>
 
     </div>
+
+<!-- CONTINUE payment link -->
     <a id="checkPage" href="/add-to-cart2">CONTINUE PAYMENT</a>
 </nav>
+
 <div id="page1">
+    <!-- customer details -->
     <h1 id="cutD" style="text-align: start; font-size:25px;">Customer Details</h1>
     <div style="display: flex; align-items: start; justify-content: start; flex-direction: column;">
         <div style="display: flex; align-items: center; justify-content: center; gap: 10px;">
@@ -86,6 +92,8 @@
         </div>
     </div>
 
+
+    <!-- product navbar -->
     <nav id="productnav">
         <h3 id="description">Description</h3>
         <div id="QandA">
@@ -93,25 +101,31 @@
             <h3>Amount</h3>
         </div>
     </nav>
+    <!-- fatch product and get order -->
     <% if (cart && cart.products.length> 0) { %>
         <% let totalAmount=0; %>
             <% cart.products.forEach(cartItem=> { %>
                 <div id="orderProduct">
 
                     <div id="orderProductCard">
+                        <!-- product img -->
                         <img style="height: 50px; width: 50px; object-fit: cover;"
                             src="<%= cartItem.productId.pImage %>" alt="Product Image">
                         <h1 style="font-size: 20px;">
+                            <!-- product name -->
                             <%= cartItem.productId.producttitle %>
                         </h1>
                     </div>
                     <h1 style="font-size: 17px; font-weight: 400;">
+                        <!-- product qty -->
                         <%= cartItem.quantity %>
                     </h1>
+                    <!-- product price -->
                     <h1 style="font-size: 17px; font-weight: 400;">$<%= cartItem.productId.pPrice %>
                     </h1>
 
                 </div>
+                <!-- total product price  -->
                 <% totalAmount +=cartItem.quantity * cartItem.productId.pPrice; %>
 
                     <% }) %>
@@ -136,7 +150,7 @@
                                         <input type="text" id="amount" name="amount" value="<%= totalAmount * 100 %>">
                                         <!-- Amount in paise -->
 
-                                        <!-- User Details -->
+                                        <!-- customer user Details -->
                                         <div>
                                             <label for="username">Name:</label>
                                             <input type="text" id="username" name="username"
@@ -161,14 +175,21 @@
                                         </div>
                                     </div>
 
+                                    <!-- payment order butten -->
                                     <button id="paymentBtn" type="submit">Payment Order</button>
                                 </form>
 </div>
 
 
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-<!-- JavaScript for Handling Payment -->
+
+
+
+
+<!-- JavaScript for Handling Payment functionlity-->
 <script>
+
+
     document.getElementById('paymentForm').addEventListener('submit', async function (e) {
         e.preventDefault();  // Prevent form from submitting normally
 
@@ -180,16 +201,14 @@
 
         // Retrieve the product details from the hidden div
         let productDetails = JSON.parse(document.getElementById('productData').getAttribute('data-products'));
-        console.log(productDetails);  // Ensure product details are correct in the console
+        // console.log(productDetails);  // Ensure product details are correct in the console
 
-        //  // Format productDetails to a readable string for the invoice (e.g., product names and quantities)
-        // let productDetailsString = productDetails.map(item => {
-        //     return `${item.productName},${item.quantity},${item.price}`;
-        // }).join(', ');
 
+
+        // productDetails format set
         const formattedProducts = productDetails.map(item => `${item.productName} (Qty: ${item.quantity}, Price: ${item.productPrice})`).join(', ');
 
-        console.log('Formatted Products:', formattedProducts);
+        // console.log('Formatted Products:', formattedProducts);
 
 
         // Create order on the server with product details
